Resolves: tdf#147822 ScUnoListenerEntry container must be std::list

... instead of std::vector to not get invalidated iterators when
the container is resized.

Regression from

    commit f8defe59ff75df2b516ee407f1dac22b0ac72a19
    CommitDate: Wed Sep 6 22:45:10 2017 +0200

        Replace some lists by vectors in unoobj (sc)

which was bad for this case.

Change-Id: I8d3a001242865cadc82b359a3198906d26373a41
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/136007
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
(cherry picked from commit 7eda1a7346677fc85a6a3fd5e16adcb4590d7b03)